remove default value, rename without extension

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <form action="/" method="post">
         <img src="/images/<%= images[0] %>" />
         <input style="display: none" name="oldName" value=<%= images[0] %> />
-        <input name="newName" value=<%= images[0] %> />
+        <input name="newName"/>
         <button type="submit">Đổi Tên</button>
     </form>
    
