--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,15 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Đổi tên ảnh</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-   <h1>Đổi tên ảnh</h1>
-    <form action="/" method="post">
-        <img src="/images/<%= images[0] %>" />
-        <input style="display: none" name="oldName" value=<%= images[0] %> />
-        <input name="newName"/>
-        <button type="submit">Đổi Tên</button>
-    </form>
+    <div class="flex justify-center flex-col lg:w-1/4 mx-auto">
+        <h1 class="text-2xl font-bold text-center">Đổi tên ảnh</h1><br/>
+        <form action="/" method="post">
+            <img class="mx-auto w-full object-contain" src="/images/<%= images[0] %>" />
+            <input style="display: none" name="oldName" value=<%= images[0] %> />
+            <input class="w-full  mt-5 border border-gray-500 rounded-lg px-5 py-2" placeholder="Nhập tên" name="newName"/><br/>
+            <button type="submit" class="bg-gray-500 w-full rounded-lg py-2 px-4 my-5">Đổi Tên</button>
+        </form>
+    </div>
+   
    
 </body>
 </html>
